Plugin configuration in README